--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,17 @@
 {
-  "singleQuote": true
+  "printWidth": 125,
+  "semi": true,
+  "singleQuote": true,
+  "arrowParens": "always",
+  "endOfLine": "crlf",
+  "overrides": [
+    {
+      "files": "*.html",
+      "options": {
+        "printWidth": 9999,
+        "semi": true,
+        "parser": "html"
+      }
+    }
+  ]
 }
