--- a/package.json
+++ b/package.json
@@ -34,25 +34,26 @@
     "rxjs": "~6.5.5"
   },
   "devDependencies": {
-    "@nrwl/nest": "^10.1.0",
-    "@nrwl/workspace": "10.1.0",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "eslint": "6.8.0",
-    "prettier": "2.0.4",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "~3.9.3",
-    "@nrwl/jest": "10.1.0",
-    "jest": "26.2.2",
-    "@types/jest": "26.0.8",
-    "ts-jest": "26.1.4",
-    "@nrwl/node": "10.1.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/eslint-plugin-nx": "10.1.0",
-    "@typescript-eslint/parser": "2.19.2",
+    "@nrwl/jest": "10.1.0",
+    "@nrwl/nest": "^10.1.0",
+    "@nrwl/node": "10.1.0",
+    "@nrwl/web": "^10.1.0",
+    "@nrwl/workspace": "10.1.0",
+    "@types/jest": "26.0.8",
+    "@types/node": "~8.9.4",
     "@typescript-eslint/eslint-plugin": "2.19.2",
-    "eslint-config-prettier": "6.0.0"
+    "@typescript-eslint/parser": "2.19.2",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.0.0",
+    "jest": "26.2.2",
+    "prettier": "2.0.4",
+    "ts-jest": "26.1.4",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3"
   }
 }
