--- a/nx.json
+++ b/nx.json
@@ -1,7 +1,7 @@
 {
   "npmScope": "supremegaming",
   "affected": {
-    "defaultBase": "master"
+    "defaultBase": "development"
   },
   "implicitDependencies": {
     "workspace.json": "*",
@@ -24,6 +24,18 @@
   },
   "projects": {
     "data-api-nest": {
+      "tags": []
+    },
+    "common-entities": {
+      "tags": []
+    },
+    "common-entities-ark": {
+      "tags": []
+    },
+    "common-entities-steam": {
+      "tags": []
+    },
+    "common-entities-servers": {
       "tags": []
     }
   }
