--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@supremegaming/common/entities": ["libs/common/entities/src/index.ts"],
+      "@supremegaming/common/entities/ark": ["libs/common/entities/ark/src/index.ts"],
+      "@supremegaming/common/entities/steam": ["libs/common/entities/steam/src/index.ts"],
+      "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
