Added conan sqlite entities

--- a/nx.json
+++ b/nx.json
@@ -36,6 +36,12 @@
     },
     "common-entities-servers": {
       "tags": []
+    },
+    "conan-cacher": {
+      "tags": []
+    },
+    "common-entities-conan": {
+      "tags": []
     }
   }
 }
