--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
+    "sqlite3": "^5.0.0",
     "typeorm": "^0.2.25",
     "uuid": "^8.3.0"
   },
