--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,7 +11,7 @@
     "target": "es2015",
     "module": "esnext",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "lib": ["esnext", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
@@ -19,7 +19,8 @@
       "@supremegaming/common/entities": ["libs/common/entities/src/index.ts"],
       "@supremegaming/common/entities/ark": ["libs/common/entities/ark/src/index.ts"],
       "@supremegaming/common/entities/steam": ["libs/common/entities/steam/src/index.ts"],
-      "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"]
+      "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"],
+      "@supremegaming/common/entities/conan": ["libs/common/entities/conan/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
