--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "@nrwl/cli": "10.3.1",
     "@nrwl/nest": "10.3.1",
     "@nrwl/workspace": "10.3.1",
     "@types/node": "~8.9.4",
