--- a/package.json
+++ b/package.json
@@ -26,15 +26,33 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.5.5"
+  },
   "devDependencies": {
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "10.3.1",
-    "@nrwl/nest": "10.3.1",
+    "@nrwl/eslint-plugin-nx": "10.3.1",
+    "@nrwl/jest": "10.3.1",
+    "@nrwl/nest": "^10.3.1",
+    "@nrwl/node": "10.3.1",
+    "@nrwl/web": "^10.3.1",
     "@nrwl/workspace": "10.3.1",
+    "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
+    "jest": "26.2.2",
     "prettier": "2.0.4",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
     "typescript": "4.0.3"
