--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "10.3.1",
-    "@nrwl/eslint-plugin-nx": "10.3.1",
-    "@nrwl/jest": "10.3.1",
-    "@nrwl/nest": "^10.3.1",
-    "@nrwl/node": "10.3.1",
-    "@nrwl/web": "^10.3.1",
-    "@nrwl/workspace": "10.3.1",
+    "@nrwl/cli": "10.4.7",
+    "@nrwl/eslint-plugin-nx": "10.4.7",
+    "@nrwl/jest": "10.4.7",
+    "@nrwl/nest": "10.4.7",
+    "@nrwl/node": "10.4.7",
+    "@nrwl/web": "10.4.7",
+    "@nrwl/workspace": "10.4.7",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
     "@typescript-eslint/eslint-plugin": "4.3.0",
@@ -56,7 +56,7 @@
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
-    "prettier": "2.0.4",
+    "prettier": "2.1.2",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
