--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nrwl/jest": "10.4.7",
     "@nrwl/nest": "10.4.7",
     "@nrwl/node": "10.4.7",
+    "@nrwl/tao": "10.4.7",
     "@nrwl/web": "10.4.7",
     "@nrwl/workspace": "10.4.7",
     "@types/jest": "26.0.8",
