--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "format:write": "nx format:write",
     "format:check": "nx format:check",
     "update": "nx migrate latest",
-    "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "workspace-generator": "nx workspace-generator"
   },
   "private": true,
   "dependencies": {
@@ -41,25 +41,26 @@
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "10.3.1",
-    "@nrwl/eslint-plugin-nx": "10.3.1",
-    "@nrwl/jest": "10.3.1",
-    "@nrwl/nest": "^10.3.1",
-    "@nrwl/node": "10.3.1",
-    "@nrwl/web": "^10.3.1",
-    "@nrwl/workspace": "10.3.1",
+    "@nrwl/cli": "11.0.18",
+    "@nrwl/eslint-plugin-nx": "11.0.18",
+    "@nrwl/jest": "11.0.18",
+    "@nrwl/nest": "11.0.18",
+    "@nrwl/node": "11.0.18",
+    "@nrwl/tao": "11.0.18",
+    "@nrwl/web": "11.0.18",
+    "@nrwl/workspace": "11.0.18",
     "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
-    "prettier": "2.0.4",
+    "prettier": "2.1.2",
     "ts-jest": "26.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
+    "ts-node": "9.1.1",
+    "tslint": "6.1.3",
     "typescript": "4.0.3"
   }
 }
