--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@nrwl/angular": "^11.0.18",
     "@nrwl/cli": "11.0.18",
     "@nrwl/eslint-plugin-nx": "11.0.18",
     "@nrwl/jest": "11.0.18",
