--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.3",
+    "marked": "^1.2.7",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
@@ -47,6 +48,7 @@
     "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
     "uuid": "^8.3.0",
+    "webfontloader": "^1.6.28",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
