(feat-website): SG website migration (#4)
* Added @nrwl/angular plugin

* Added boilerplate angular app

* Added website from standalone repository

* Added common scss lib

Added additional tslint rules for stricter development

* Added webfontloader to allowed commonjs dep

In supremegaming-angular application

--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,9 @@
     }
   },
   "projects": {
+    "scss": {
+      "tags": []
+    },
     "data-api-nest": {
       "tags": []
     },
@@ -43,6 +46,13 @@
     },
     "conan-cacher": {
       "tags": []
+    },
+    "supremegaming-angular": {
+      "tags": []
+    },
+    "supremegaming-angular-e2e": {
+      "tags": [],
+      "implicitDependencies": ["supremegaming-angular"]
     }
   }
 }
