--- a/package.json
+++ b/package.json
@@ -23,24 +23,41 @@
     "update": "nx migrate latest",
     "dep-graph": "nx dep-graph",
     "help": "nx help",
-    "workspace-generator": "nx workspace-generator"
+    "workspace-generator": "nx workspace-generator",
+    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^11.0.0",
+    "@angular/common": "^11.0.0",
+    "@angular/compiler": "^11.0.0",
+    "@angular/core": "^11.0.0",
+    "@angular/forms": "^11.0.0",
+    "@angular/platform-browser": "^11.0.0",
+    "@angular/platform-browser-dynamic": "^11.0.0",
+    "@angular/router": "^11.0.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.3",
+    "marked": "^1.2.7",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
     "sqlite3": "^5.0.0",
+    "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "webfontloader": "^1.6.28",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular/compiler-cli": "^11.0.0",
+    "@angular/language-service": "^11.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@nrwl/angular": "^11.0.18",
     "@nrwl/cli": "11.0.18",
     "@nrwl/eslint-plugin-nx": "11.0.18",
     "@nrwl/jest": "11.0.18",
@@ -53,14 +70,18 @@
     "@types/node": "12.12.38",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "codelyzer": "^6.0.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
     "prettier": "2.1.2",
     "ts-jest": "26.4.0",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.3"
+    "typescript": "4.0.3",
+    "cypress": "^5.5.0",
+    "@nrwl/cypress": "11.0.18"
   }
 }
