--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help",
     "workspace-generator": "nx workspace-generator",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.0",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
-    "@angular/forms": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^11.0.0",
+    "@angular/animations": "11.2.13",
+    "@angular/common": "11.2.13",
+    "@angular/compiler": "11.2.13",
+    "@angular/core": "11.2.13",
+    "@angular/forms": "11.2.13",
+    "@angular/platform-browser": "11.2.13",
+    "@angular/platform-browser-dynamic": "11.2.13",
+    "@angular/router": "11.2.13",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
@@ -52,36 +52,36 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/compiler-cli": "^11.0.0",
-    "@angular/language-service": "^11.0.0",
+    "@angular-devkit/build-angular": "0.1102.12",
+    "@angular/compiler-cli": "11.2.13",
+    "@angular/language-service": "11.2.13",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/angular": "^11.0.18",
-    "@nrwl/cli": "11.0.18",
-    "@nrwl/eslint-plugin-nx": "11.0.18",
-    "@nrwl/jest": "11.0.18",
-    "@nrwl/nest": "11.0.18",
-    "@nrwl/node": "11.0.18",
-    "@nrwl/tao": "11.0.18",
-    "@nrwl/web": "11.0.18",
-    "@nrwl/workspace": "11.0.18",
+    "@nrwl/angular": "12.1.1",
+    "@nrwl/cli": "12.1.1",
+    "@nrwl/eslint-plugin-nx": "12.1.1",
+    "@nrwl/jest": "12.1.1",
+    "@nrwl/nest": "12.1.1",
+    "@nrwl/node": "12.1.1",
+    "@nrwl/tao": "12.1.1",
+    "@nrwl/web": "12.1.1",
+    "@nrwl/workspace": "12.1.1",
     "@types/jest": "26.0.8",
-    "@types/node": "12.12.38",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
+    "@types/node": "14.14.33",
+    "@typescript-eslint/eslint-plugin": "4.19.0",
+    "@typescript-eslint/parser": "4.19.0",
     "codelyzer": "^6.0.0",
-    "dotenv": "6.2.0",
-    "eslint": "7.10.0",
-    "eslint-config-prettier": "6.0.0",
+    "dotenv": "8.2.0",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
     "jest": "26.2.2",
-    "jest-preset-angular": "8.3.1",
-    "prettier": "2.1.2",
-    "ts-jest": "26.4.0",
+    "jest-preset-angular": "8.4.0",
+    "prettier": "2.2.1",
+    "ts-jest": "26.5.5",
     "ts-node": "9.1.1",
     "tslint": "6.1.3",
-    "typescript": "4.0.3",
+    "typescript": "4.1.4",
     "cypress": "^5.5.0",
-    "@nrwl/cypress": "11.0.18"
+    "@nrwl/cypress": "12.1.1"
   }
 }
