Added base api lib with blank auth module

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,7 +25,8 @@
       "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"],
       "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
       "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
-      "@supremegaming/ui": ["libs/ui/src/index.ts"]
+      "@supremegaming/ui": ["libs/ui/src/index.ts"],
+      "@supremegaming/api": ["libs/api/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
