Implemented basic steam auth

--- a/package.json
+++ b/package.json
@@ -39,10 +39,15 @@
     "@angular/router": "13.3.2",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.0",
     "marked": "^1.2.7",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-steam": "^1.0.15",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.0",
     "sqlite3": "^5.0.0",
@@ -73,6 +78,7 @@
     "@nrwl/workspace": "13.10.1",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
+    "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
     "codelyzer": "^6.0.0",
