Added initial rcon wrapper mono repo lib
RCON wrapper class will instantiate every time a server entity is loaded and contains ready methods to connect and execute rcon commands.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,8 @@
       "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
       "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
       "@supremegaming/ui": ["libs/ui/src/index.ts"],
-      "@supremegaming/api": ["libs/api/src/index.ts"]
+      "@supremegaming/api": ["libs/api/src/index.ts"],
+      "@supremegaming/utilities/rcon": ["libs/utilities/rcon/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
