--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.0",
     "sqlite3": "^5.0.0",
+    "srcds-rcon": "github:Proantagonist/SupremeArkSrcdsRcon",
     "tslib": "^2.0.0",
     "typeorm": "^0.2.25",
     "uuid": "^8.3.0",
