--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -27,7 +27,8 @@
       "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
       "@supremegaming/ui": ["libs/ui/src/index.ts"],
       "@supremegaming/api": ["libs/api/src/index.ts"],
-      "@supremegaming/utilities/rcon": ["libs/utilities/rcon/src/index.ts"]
+      "@supremegaming/utilities/rcon": ["libs/utilities/rcon/src/index.ts"],
+      "@supremegaming/common/entities/administration": ["libs/common/entities/administration/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
