--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-steam": "^1.0.15",
+    "public-ip": "^4.0.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.1.0",
     "sqlite3": "^5.0.0",
