Added ark cacher app and db connection utility
DB connection utility exposes a function that creates or returns and existing db conneciton singleton.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,7 +28,8 @@
       "@supremegaming/ui": ["libs/ui/src/index.ts"],
       "@supremegaming/api": ["libs/api/src/index.ts"],
       "@supremegaming/utilities/rcon": ["libs/utilities/rcon/src/index.ts"],
-      "@supremegaming/common/entities/administration": ["libs/common/entities/administration/src/index.ts"]
+      "@supremegaming/common/entities/administration": ["libs/common/entities/administration/src/index.ts"],
+      "@supremegaming/utilities/database": ["libs/utilities/database/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
