--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -11,10 +11,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
+    - name: Setup Node
+      uses: actions/setup-node@v2
       with:
         node-version: '14'
         cache: 'npm'
-    - run: npm i
-    - run: npx nx run supremegaming-angular:build:production
+
+    - name: Install Dependencies
+      run: npm i
+
+    - name: Build Supreme Gaming Website
+      run: npx nx run supremegaming-angular:build:production
+
+    - name: Deploy
+      uses: easingthemes/ssh-deploy@main
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{secrets.REMOTE_TARGET}}
