--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,7 +20,8 @@
       "@supremegaming/common/entities/ark": ["libs/common/entities/ark/src/index.ts"],
       "@supremegaming/common/entities/steam": ["libs/common/entities/steam/src/index.ts"],
       "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"],
-      "@supremegaming/common/entities/conan": ["libs/common/entities/conan/src/index.ts"]
+      "@supremegaming/common/entities/conan": ["libs/common/entities/conan/src/index.ts"],
+      "@supremegaming/ui": ["libs/ui/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
