Added public pages lib
This library will contain mostly routing confiruation and feature modules for the public-facing website pages.

--- a/nx.json
+++ b/nx.json
@@ -26,6 +26,7 @@
     "conan-cacher": { "tags": [] },
     "supremegaming-angular": { "tags": [] },
     "supremegaming-angular-e2e": { "tags": [], "implicitDependencies": ["supremegaming-angular"] },
-    "ui": { "tags": [] }
+    "ui": { "tags": [] },
+    "pages-public": { "tags": [] }
   }
 }
