Added boilerplate common interfaces lib
Lib will contain website envionment interfaces for now, but will be a lib for all common interfaces across the monorepo

--- a/nx.json
+++ b/nx.json
@@ -29,6 +29,7 @@
     "ui": { "tags": [] },
     "pages-public": { "tags": [] },
     "data-access": { "tags": [] },
-    "common-ngx": { "tags": [] }
+    "common-ngx": { "tags": [] },
+    "common-interfaces": { "tags": [] }
   }
 }
