--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,7 +24,8 @@
       "@supremegaming/ui": ["libs/ui/src/index.ts"],
       "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
       "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
-      "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"]
+      "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"],
+      "@supremegaming/common/interfaces": ["libs/common/interfaces/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
