--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "11.2.13",
+    "@angular/cdk": "11.2.13",
     "@angular/common": "11.2.13",
     "@angular/compiler": "11.2.13",
     "@angular/core": "11.2.13",
