Enabled strict templates

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,7 +29,8 @@
     }
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true
+    "fullTemplateTypeCheck": true,
+    "strictTemplates": true
   },
   "exclude": ["node_modules", "tmp"]
 }
