--- a/libs/pages/public/.eslintrc.json
+++ b/libs/pages/public/.eslintrc.json
@@ -5,18 +5,29 @@
     {
       "files": ["*.ts"],
       "extends": ["plugin:@nrwl/nx/angular", "plugin:@angular-eslint/template/process-inline-templates"],
-      "parserOptions": { "project": ["libs/pages/public/tsconfig.*?.json"] },
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
-          { "type": "attribute", "prefix": "supremegaming", "style": "camelCase" }
+          {
+            "type": "attribute",
+            "prefix": "supremegaming",
+            "style": "camelCase"
+          }
         ],
         "@angular-eslint/component-selector": [
           "error",
-          { "type": "element", "prefix": "supremegaming", "style": "kebab-case" }
+          {
+            "type": "element",
+            "prefix": "supremegaming",
+            "style": "kebab-case"
+          }
         ]
       }
     },
-    { "files": ["*.html"], "extends": ["plugin:@nrwl/nx/angular-template"], "rules": {} }
+    {
+      "files": ["*.html"],
+      "extends": ["plugin:@nrwl/nx/angular-template"],
+      "rules": {}
+    }
   ]
 }
