--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,14 +18,14 @@
     "paths": {
       "@supremegaming/common/entities": ["libs/common/entities/src/index.ts"],
       "@supremegaming/common/entities/ark": ["libs/common/entities/ark/src/index.ts"],
-      "@supremegaming/common/entities/steam": ["libs/common/entities/steam/src/index.ts"],
-      "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"],
       "@supremegaming/common/entities/conan": ["libs/common/entities/conan/src/index.ts"],
-      "@supremegaming/ui": ["libs/ui/src/index.ts"],
-      "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
-      "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
+      "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"],
+      "@supremegaming/common/entities/steam": ["libs/common/entities/steam/src/index.ts"],
+      "@supremegaming/common/interfaces": ["libs/common/interfaces/src/index.ts"],
       "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"],
-      "@supremegaming/common/interfaces": ["libs/common/interfaces/src/index.ts"]
+      "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
+      "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
+      "@supremegaming/ui": ["libs/ui/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
