Add deploy workflow dependency on build

--- a/.github/workflows/development_main.yml
+++ b/.github/workflows/development_main.yml
@@ -13,3 +13,4 @@ jobs:
     uses: ./.github/workflows/development_build.yml
   deploy:
     uses: ./.github/workflows/development_deploy.yml
+    needs: build
