--- a/.github/workflows/development_deploy.yml
+++ b/.github/workflows/development_deploy.yml
@@ -5,6 +5,15 @@ name: Development Deploy
 
 on:
   workflow_call:
+    secrets:
+      SERVER_SSH_KEY:
+        required: true
+      REMOTE_HOST:
+        required: true
+      REMOTE_USER:
+        required: true
+      REMOTE_TARGET:
+        required: true
 
 jobs:
   deploy:
