--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -26,3 +26,8 @@ jobs:
 
       - name: Build Supreme Gaming Website
         run: npx nx run supremegaming-angular:build:production
+
+      - name: Upload Build Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: dist/ # or path/to/artifact
