--- a/.github/workflows/development_main.yml
+++ b/.github/workflows/development_main.yml
@@ -11,9 +11,13 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/development_build.yml
+    with:
+      sha: ${{ github.sha }}
   deploy:
     uses: ./.github/workflows/development_deploy.yml
     needs: build
+    with:
+      sha: ${{ github.sha }}
     secrets:
       SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
       REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
