Re-added deploy step

--- a/.github/workflows/development_deploy.yml
+++ b/.github/workflows/development_deploy.yml
@@ -5,10 +5,6 @@ name: Development Deploy
 
 on:
   workflow_call:
-    inputs:
-      sha:
-        required: true
-        type: string
     secrets:
       SERVER_SSH_KEY:
         required: true
@@ -28,7 +24,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          - name: ${{ inputs.sha }}
+          name: ${{ github.sha }}
 
       - name: SSH Deploy
         uses: easingthemes/ssh-deploy@main
