--- a/.github/workflows/development_main.yml
+++ b/.github/workflows/development_main.yml
@@ -11,15 +11,11 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/development_build.yml
-    with:
-      sha: ${{ github.sha }}
-  # deploy:
-  #   uses: ./.github/workflows/development_deploy.yml
-  #   needs: build
-  #   with:
-  #     sha: ${{ github.sha }}
-  #   secrets:
-  #     SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
-  #     REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-  #     REMOTE_USER: ${{ secrets.REMOTE_USER }}
-  #     REMOTE_TARGET: ${{ secrets.REMOTE_TARGET }}
+  deploy:
+    uses: ./.github/workflows/development_deploy.yml
+    needs: build
+    secrets:
+      SERVER_SSH_KEY: ${{ secrets.SERVER_SSH_KEY }}
+      REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+      REMOTE_USER: ${{ secrets.REMOTE_USER }}
+      REMOTE_TARGET: ${{ secrets.REMOTE_TARGET }}
