--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -5,10 +5,6 @@ name: Development Build
 
 on:
   workflow_call:
-    inputs:
-      sha:
-        required: true
-        type: string
 
 jobs:
   build:
@@ -34,5 +30,5 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ inputs.sha }}
+          name: ${{ github.sha }}
           path: dist/
