Display uploaded file status

--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -7,8 +7,8 @@ on:
   workflow_call:
 
 jobs:
-  Development:
-    name: Build
+  build:
+    name: Development
     runs-on: ubuntu-latest
 
     steps:
