--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -21,8 +21,10 @@ jobs:
           node-version: '16'
           cache: 'npm'
 
-      - name: Install Dependencies
-        run: npm ci
+      # - name: Install Dependencies
+      #   run: npm ci
+
+      - uses: ./.github/workflows/restore_or_cache_deps.yml
 
       - name: Build Supreme Gaming Website
         run: npx nx run supremegaming-angular:build:production
