--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -13,18 +13,19 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
           cache: 'npm'
 
-      # - name: Install Dependencies
-      #   run: npm ci
+      - name: list 1
+        run: ls -R
 
-      - uses: ./.github/workflows/restore_or_cache_deps.yml
+      - name: Install Dependencies
+        run: npm i
 
       - name: Build Supreme Gaming Website
         run: npx nx run supremegaming-angular:build:production
@@ -34,3 +35,6 @@ jobs:
         with:
           name: ${{ github.sha }}
           path: dist/
+
+      - name: list 2
+        run: ls -R
