--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -26,7 +26,7 @@ jobs:
           key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm i
 
       - name: Build Supreme Gaming Website
         run: npx nx run supremegaming-angular:build:production
