--- a/.github/workflows/development_build.yml
+++ b/.github/workflows/development_build.yml
@@ -13,16 +13,20 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '16'
-          cache: 'npm'
+
+      - uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm i
 
       - name: Build Supreme Gaming Website
         run: npx nx run supremegaming-angular:build:production
