feat: Initial data api API (#15)
* Added base api lib with blank auth module

* Implemented basic steam auth

* Added basic config documentation for data api app

* Added basic servers module to api lib

* Added initial rcon wrapper mono repo lib

RCON wrapper class will instantiate every time a server entity is loaded and contains ready methods to connect and execute rcon commands.

* Updated srcds rcon dep

* Using db entities

App now uses active db connections and refactored servers module to retrieve entities instead of fixed list

* Executing server commands successfully

* Added administration/users entity

This is the ORM table responsible for storing/retrieving users on the passport validation authentication step

* Added auto user registration after steam auth

* Added basic permission-based route authorization

* Updated ormconfig with multiple connections

* Added host server entity

Hosts servers can have many game servers. Host servers will be registered by the service running on a client.

* Ranamed ark game entities

* Added ark cacher app and db connection utility

DB connection utility exposes a function that creates or returns and existing db conneciton singleton.

* Sync package-lock

* Formatting pass

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@supremegaming/api": ["libs/api/src/index.ts"],
       "@supremegaming/common/entities": ["libs/common/entities/src/index.ts"],
+      "@supremegaming/common/entities/administration": ["libs/common/entities/administration/src/index.ts"],
       "@supremegaming/common/entities/ark": ["libs/common/entities/ark/src/index.ts"],
       "@supremegaming/common/entities/conan": ["libs/common/entities/conan/src/index.ts"],
       "@supremegaming/common/entities/servers": ["libs/common/entities/servers/src/index.ts"],
@@ -25,7 +27,9 @@
       "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"],
       "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
       "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
-      "@supremegaming/ui": ["libs/ui/src/index.ts"]
+      "@supremegaming/ui": ["libs/ui/src/index.ts"],
+      "@supremegaming/utilities/database": ["libs/utilities/database/src/index.ts"],
+      "@supremegaming/utilities/rcon": ["libs/utilities/rcon/src/index.ts"]
     }
   },
   "angularCompilerOptions": {
