--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "@angular/platform-browser": "13.3.2",
     "@angular/platform-browser-dynamic": "13.3.2",
     "@angular/router": "13.3.2",
+    "@discordjs/rest": "^0.2.0-canary.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.0",
+    "discord.js": "^13.12.0",
     "marked": "^1.2.7",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
@@ -85,6 +87,7 @@
     "@typescript-eslint/parser": "5.18.0",
     "codelyzer": "^6.0.0",
     "cypress": "^5.5.0",
+    "discord-api-types": "^0.26.0",
     "dotenv": "10.0.0",
     "eslint": "8.12.0",
     "eslint-config-prettier": "8.1.0",
