Transplant discord community into separate bot
Ticket and community help bots have been split

--- a/apps/supreme-discord-ticket-bot-node/.env.sample
+++ b/apps/supreme-discord-ticket-bot-node/.env.sample
@@ -12,3 +12,11 @@ TYPEORM_SYNCHRONIZE =
 TYPEORM_DROP_SCHEMA = 
 TYPEORM_LOGGING = 
 TYPEORM_DRIVER_EXTRA = 
+
+
+# 
+# Optional
+# 
+
+# Set to false to disable slash command registration for feature modules.
+DISCORD_REGISTER_SLASH_COMMANDS = 
