--- a/apps/supreme-discord-ticket-bot-node/project.json
+++ b/apps/supreme-discord-ticket-bot-node/project.json
@@ -10,7 +10,8 @@
         "outputPath": "dist/apps/supreme-discord-ticket-bot-node",
         "main": "apps/supreme-discord-ticket-bot-node/src/main.ts",
         "tsConfig": "apps/supreme-discord-ticket-bot-node/tsconfig.app.json",
-        "assets": ["apps/supreme-discord-ticket-bot-node/src/assets"]
+        "assets": ["apps/supreme-discord-ticket-bot-node/src/assets"],
+        "generatePackageJson": true
       },
       "configurations": {
         "production": {
