--- a/apps/supreme-discord-community-bot-node/.env.sample
+++ b/apps/supreme-discord-community-bot-node/.env.sample
@@ -9,5 +9,9 @@ DISCORD_WELCOME_CHANNEL_NAME =
 # Optional
 # 
 
-# Set to false to disable slash command registration for feature modules.
+# Set to false to disable slash command registration for feature modules. There is a limit to how many commands can be created per day
+# and as such is recommended that this is set to false when developing the bot.
+# 
+# https://discordjs.guide/creating-your-bot/command-deployment.html#command-registration
+# 
 DISCORD_REGISTER_SLASH_COMMANDS = 
