--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,10 @@
       "@supremegaming/common/interfaces": ["libs/common/interfaces/src/index.ts"],
       "@supremegaming/common/ngx": ["libs/common/ngx/src/index.ts"],
       "@supremegaming/data-access": ["libs/data-access/src/index.ts"],
+      "@supremegaming/discord/bootstrap": ["libs/discord/bootstrap/src/index.ts"],
+      "@supremegaming/discord/community": ["libs/discord/community/src/index.ts"],
+      "@supremegaming/discord/templates": ["libs/discord/templates/src/index.ts"],
+      "@supremegaming/discord/ticket": ["libs/discord/ticket/src/index.ts"],
       "@supremegaming/pages/public": ["libs/pages/public/src/index.ts"],
       "@supremegaming/ui": ["libs/ui/src/index.ts"],
       "@supremegaming/utilities/database": ["libs/utilities/database/src/index.ts"],
