--- a/apps/supreme-discord-ticket-bot-node/project.json
+++ b/apps/supreme-discord-ticket-bot-node/project.json
@@ -10,10 +10,7 @@
         "outputPath": "dist/apps/supreme-discord-ticket-bot-node",
         "main": "apps/supreme-discord-ticket-bot-node/src/main.ts",
         "tsConfig": "apps/supreme-discord-ticket-bot-node/tsconfig.app.json",
-        "assets": [
-          "apps/supreme-discord-ticket-bot-node/src/assets",
-          "apps/supreme-discord-community-bot-node/src/Dockerfile"
-        ],
+        "assets": ["apps/supreme-discord-ticket-bot-node/src/assets", "apps/supreme-discord-ticket-bot-node/src/Dockerfile"],
         "generatePackageJson": true
       },
       "configurations": {
@@ -54,3 +51,4 @@
   },
   "tags": []
 }
+
