--- a/apps/supreme-discord-ticket-bot-node/project.json
+++ b/apps/supreme-discord-ticket-bot-node/project.json
@@ -27,6 +27,17 @@
         }
       }
     },
+    "image-build": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "docker build -t supreme-discord-ticket-bot-node ."
+          }
+        ],
+        "cwd": "dist/apps/supreme-discord-ticket-bot-node"
+      }
+    },
     "serve": {
       "executor": "@nrwl/node:node",
       "options": {
