--- a/apps/supreme-discord-community-bot-node/project.json
+++ b/apps/supreme-discord-community-bot-node/project.json
@@ -10,7 +10,10 @@
         "outputPath": "dist/apps/supreme-discord-community-bot-node",
         "main": "apps/supreme-discord-community-bot-node/src/main.ts",
         "tsConfig": "apps/supreme-discord-community-bot-node/tsconfig.app.json",
-        "assets": ["apps/supreme-discord-community-bot-node/src/assets"],
+        "assets": [
+          "apps/supreme-discord-community-bot-node/src/assets",
+          "apps/supreme-discord-community-bot-node/src/Dockerfile"
+        ],
         "generatePackageJson": true
       },
       "configurations": {
@@ -25,6 +28,17 @@
             }
           ]
         }
+      }
+    },
+    "image-build": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "docker build -t supreme-discord-community-bot-node ."
+          }
+        ],
+        "cwd": "dist/apps/supreme-discord-community-bot-node"
       }
     },
     "serve": {
@@ -51,3 +65,4 @@
   },
   "tags": []
 }
+
