--- a/apps/supreme-discord-ticket-bot-node/project.json
+++ b/apps/supreme-discord-ticket-bot-node/project.json
@@ -10,7 +10,7 @@
         "outputPath": "dist/apps/supreme-discord-ticket-bot-node",
         "main": "apps/supreme-discord-ticket-bot-node/src/main.ts",
         "tsConfig": "apps/supreme-discord-ticket-bot-node/tsconfig.app.json",
-        "assets": ["apps/supreme-discord-ticket-bot-node/src/assets"],
+        "assets": ["apps/supreme-discord-ticket-bot-node/src/assets", "apps/supreme-discord-ticket-bot-node/src/Dockerfile"],
         "generatePackageJson": true
       },
       "configurations": {
@@ -25,6 +25,17 @@
             }
           ]
         }
+      }
+    },
+    "image-build": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "docker build -t supreme-discord-ticket-bot-node ."
+          }
+        ],
+        "cwd": "dist/apps/supreme-discord-ticket-bot-node"
       }
     },
     "serve": {
@@ -51,3 +62,4 @@
   },
   "tags": []
 }
+
