Execute migrations to 14.0.0

--- a/apps/ark-cacher-node/project.json
+++ b/apps/ark-cacher-node/project.json
@@ -43,7 +43,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/apps/ark-cacher-node"],
       "options": {
-        "jestConfig": "apps/ark-cacher-node/jest.config.js",
+        "jestConfig": "apps/ark-cacher-node/jest.config.ts",
         "passWithNoTests": true
       }
     }
