--- a/libs/utilities/rcon/project.json
+++ b/libs/utilities/rcon/project.json
@@ -13,7 +13,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/utilities/rcon"],
       "options": {
-        "jestConfig": "libs/utilities/rcon/jest.config.js",
+        "jestConfig": "libs/utilities/rcon/jest.config.ts",
         "passWithNoTests": true
       }
     }
