--- a/apps/ark-cacher-node/tsconfig.app.json
+++ b/apps/ark-cacher-node/tsconfig.app.json
@@ -5,6 +5,6 @@
     "module": "commonjs",
     "types": ["node"]
   },
-  "exclude": ["**/*.spec.ts"],
+  "exclude": ["**/*.spec.ts", "jest.config.ts"],
   "include": ["**/*.ts"]
 }
