--- a/apps/supremegaming-angular/project.json
+++ b/apps/supremegaming-angular/project.json
@@ -80,7 +80,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/apps/supremegaming-angular"],
       "options": {
-        "jestConfig": "apps/supremegaming-angular/jest.config.js",
+        "jestConfig": "apps/supremegaming-angular/jest.config.ts",
         "passWithNoTests": true
       }
     }
