--- a/libs/common/entities/administration/project.json
+++ b/libs/common/entities/administration/project.json
@@ -13,7 +13,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/common/entities/administration"],
       "options": {
-        "jestConfig": "libs/common/entities/administration/jest.config.js",
+        "jestConfig": "libs/common/entities/administration/jest.config.ts",
         "passWithNoTests": true
       }
     }
