--- a/libs/common/interfaces/project.json
+++ b/libs/common/interfaces/project.json
@@ -15,7 +15,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/common/interfaces"],
       "options": {
-        "jestConfig": "libs/common/interfaces/jest.config.js",
+        "jestConfig": "libs/common/interfaces/jest.config.ts",
         "passWithNoTests": true
       }
     }
