--- a/libs/data-access/project.json
+++ b/libs/data-access/project.json
@@ -15,7 +15,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/data-access"],
       "options": {
-        "jestConfig": "libs/data-access/jest.config.js",
+        "jestConfig": "libs/data-access/jest.config.ts",
         "passWithNoTests": true
       }
     }
