--- a/libs/discord/bootstrap/project.json
+++ b/libs/discord/bootstrap/project.json
@@ -14,7 +14,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/discord/bootstrap"],
       "options": {
-        "jestConfig": "libs/discord/bootstrap/jest.config.js",
+        "jestConfig": "libs/discord/bootstrap/jest.config.ts",
         "passWithNoTests": true
       }
     }
