--- a/libs/pages/public/project.json
+++ b/libs/pages/public/project.json
@@ -15,7 +15,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/pages/public"],
       "options": {
-        "jestConfig": "libs/pages/public/jest.config.js",
+        "jestConfig": "libs/pages/public/jest.config.ts",
         "passWithNoTests": true
       }
     }
