Update build workflow trigger on all commits
Build should be tested on all commits and uses origin/development as the
base to work around issues with 'development' ref object not being
available in the run. This is a easy work around for now.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,7 @@
 name: Build Affected
+
 on:
   push:
-    branches-ignore:
-      - development
-      - master
-  pull_request:
-    branches:
-      - development
 
 jobs:
   build:
@@ -35,11 +30,10 @@ jobs:
         run: npm ci
 
       - name: Build Affected
-        run: npx nx affected:apps --target=build --configuration=production --exclude=ark-cacher-node,conan-cacher,data-api-nest
+        run: npx nx affected:build --configuration=production --exclude=ark-cacher-node,conan-cacher,data-api-nest  --base=origin/development --parallel=2
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.sha }}
           path: dist/
-
