--- a/apps/conan-cacher/project.json
+++ b/apps/conan-cacher/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "apps/conan-cacher",
+  "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "apps/conan-cacher/src",
   "projectType": "application",
   "prefix": "conan-cacher",
