--- a/apps/data-api-nest/project.json
+++ b/apps/data-api-nest/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "apps/data-api-nest",
+  "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "apps/data-api-nest/src",
   "projectType": "application",
   "prefix": "data-api-nest",
