--- a/apps/supreme-discord-community-bot-node/project.json
+++ b/apps/supreme-discord-community-bot-node/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "apps/supreme-discord-community-bot-node",
+  "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "apps/supreme-discord-community-bot-node/src",
   "projectType": "application",
   "targets": {
