--- a/libs/discord/bootstrap/project.json
+++ b/libs/discord/bootstrap/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/discord/bootstrap",
+  "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/discord/bootstrap/src",
   "projectType": "library",
   "targets": {
