--- a/nx.json
+++ b/nx.json
@@ -31,9 +31,6 @@
       }
     ]
   },
-  "cli": {
-    "defaultCollection": "@nrwl/nest"
-  },
   "defaultProject": "supremegaming-angular",
   "generators": {
     "@nrwl/angular:application": {
@@ -49,5 +46,6 @@
     "@nrwl/angular:component": {
       "style": "scss"
     }
-  }
+  },
+  "$schema": "./node_modules/nx/schemas/nx-schema.json"
 }
