--- a/apps/supremegaming-angular/project.json
+++ b/apps/supremegaming-angular/project.json
@@ -1,6 +1,6 @@
 {
+  "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "application",
-  "root": "apps/supremegaming-angular",
   "sourceRoot": "apps/supremegaming-angular/src",
   "prefix": "supremegaming",
   "targets": {
