--- a/libs/api/project.json
+++ b/libs/api/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/api",
+  "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/api/src",
   "projectType": "library",
   "targets": {
