--- a/libs/common/entities/administration/project.json
+++ b/libs/common/entities/administration/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/common/entities/administration",
+  "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/common/entities/administration/src",
   "projectType": "library",
   "targets": {
