--- a/libs/common/entities/ark/project.json
+++ b/libs/common/entities/ark/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/common/entities/ark",
+  "$schema": "..\\..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/common/entities/ark/src",
   "projectType": "library",
   "generators": {},
