--- a/libs/common/entities/project.json
+++ b/libs/common/entities/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/common/entities",
+  "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/common/entities/src",
   "projectType": "library",
   "generators": {},
