--- a/libs/common/interfaces/project.json
+++ b/libs/common/interfaces/project.json
@@ -1,6 +1,6 @@
 {
+  "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
-  "root": "libs/common/interfaces",
   "sourceRoot": "libs/common/interfaces/src",
   "prefix": "supremegaming",
   "targets": {
