--- a/libs/data-access/project.json
+++ b/libs/data-access/project.json
@@ -1,6 +1,6 @@
 {
+  "$schema": "..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "projectType": "library",
-  "root": "libs/data-access",
   "sourceRoot": "libs/data-access/src",
   "prefix": "supremegaming",
   "targets": {
