--- a/libs/utilities/rcon/project.json
+++ b/libs/utilities/rcon/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/utilities/rcon",
+  "$schema": "..\\..\\..\\node_modules\\nx\\schemas\\project-schema.json",
   "sourceRoot": "libs/utilities/rcon/src",
   "projectType": "library",
   "targets": {
